# ChangeLog for app-text/foxitreader
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +foxitreader-1.1.0-r1.ebuild, +files/FoxitReader.txt,
  +files/foxitreader.desktop, +files/foxitreader.png:
  ebuild from #308147

  28 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  foxitreader-1.1.0.ebuild:
  fix gtk depend

  28 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  foxitreader-1.1.0.ebuild:
  fix depend and test it in x86

  27 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  fix depend, tnx kflirik@gentoo.ru

*foxitreader-1.1.0 (18 Aug 2009)

  18 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +foxitreader-1.1.0.ebuild, +metadata.xml:
  initial commit
